--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -135,7 +135,7 @@
                     If you are engaged in the elevator     industry and need reliable products, please feel free to contact us. We will be more than happy to serve you.
                 </p>
                 <div class="btn-contact-us is-center">
-                    <a href="#"><i class="bi bi-arrow-right-square-fill"></i>Contact Now</a>
+                    <a href="/contact"><i class="bi bi-arrow-right-square-fill"></i>Contact Now</a>
                 </div>
             </div>
         </div>
