--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -49,96 +49,9 @@
         <div class="list_card_container active">
             <ul class="arrow_card is-between">
                 <li class="item_card">
-                    <div class="wrapper_img">
+                    <a href="/products/:slug" class="wrapper_img">
                         <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
-
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -150,99 +63,12 @@
             </ul>
         </div>
 
-        <div class="list_card_container ">
+        <div class="list_card_container">
             <ul class="arrow_card is-between">
                 <li class="item_card">
-                    <div class="wrapper_img">
+                    <a href="/products/detail" class="wrapper_img">
                         <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
-
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -254,99 +80,12 @@
             </ul>
         </div>
 
-        <div class="list_card_container ">
+        <div class="list_card_container">
             <ul class="arrow_card is-between">
                 <li class="item_card">
-                    <div class="wrapper_img">
+                    <a href="/products/detail" class="wrapper_img">
                         <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
-
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -358,99 +97,12 @@
             </ul>
         </div>
 
-        <div class="list_card_container ">
+        <div class="list_card_container">
             <ul class="arrow_card is-between">
                 <li class="item_card">
-                    <div class="wrapper_img">
+                    <a href="/products/detail" class="wrapper_img">
                         <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
-
-            <ul class="arrow_card is-between">
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_card">
-                    <div class="wrapper_img">
-                        <img src="/img/products/1.jpg" alt="">
-                    </div>
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
