--- a/src/resources/views/products/products.hbs
+++ b/src/resources/views/products/products.hbs
@@ -52,9 +52,11 @@
     </aside>
     <div class="list_products">
         <div class="wrapper_list_products">
-            <ul>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+            <ul class="arrow_card is-between">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -63,8 +65,10 @@
                         </h3>
                     </div>
                 </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -73,8 +77,10 @@
                         </h3>
                     </div>
                 </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -83,50 +89,10 @@
                         </h3>
                     </div>
                 </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
-                    <div class="title_product">
-                        <h3>
-                            <a href="#">
-                                Schindler Elevator Parts Escalator Handrails SDS SWE
-                            </a>
-                        </h3>
-                    </div>
-                </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -136,9 +102,12 @@
                     </div>
                 </li>
             </ul>
-            <ul>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+
+            <ul class="arrow_card is-between">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -147,8 +116,10 @@
                         </h3>
                     </div>
                 </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -157,8 +128,10 @@
                         </h3>
                     </div>
                 </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
@@ -167,8 +140,61 @@
                         </h3>
                     </div>
                 </li>
-                <li class="item_product">
-                    <img src="/img/products/1.jpg" alt="">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
+                    <div class="title_product">
+                        <h3>
+                            <a href="#">
+                                Schindler Elevator Parts Escalator Handrails SDS SWE
+                            </a>
+                        </h3>
+                    </div>
+                </li>
+            </ul>
+
+            <ul class="arrow_card is-between">
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
+                    <div class="title_product">
+                        <h3>
+                            <a href="#">
+                                Schindler Elevator Parts Escalator Handrails SDS SWE
+                            </a>
+                        </h3>
+                    </div>
+                </li>
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
+                    <div class="title_product">
+                        <h3>
+                            <a href="#">
+                                Schindler Elevator Parts Escalator Handrails SDS SWE
+                            </a>
+                        </h3>
+                    </div>
+                </li>
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
+                    <div class="title_product">
+                        <h3>
+                            <a href="#">
+                                Schindler Elevator Parts Escalator Handrails SDS SWE
+                            </a>
+                        </h3>
+                    </div>
+                </li>
+                <li class="item_card">
+                    <a href="/products/:slug" class="wrapper_img">
+                        <img src="/img/products/1.jpg" alt="">
+                    </a>
                     <div class="title_product">
                         <h3>
                             <a href="#">
