--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,5 +1,6 @@
 // @import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yuji+Mai&display=swap');
 
 *{
     margin: 0;
@@ -19,7 +20,8 @@ body{
 }
 /* Global */
 .layout{
-    width: 1400px;
+    width: 80%;
+    max-width: 90%;
     margin: 0 auto;
     position: relative; 
 }
@@ -258,44 +260,7 @@ ul,li{
             .list_card{
                 .list_card_container{
                     display: none;
-                    .arrow_card{
-                        .item_card{
-                            width: calc(100% / 4 - 20px);
-                            .wrapper_img{
-                                position: relative;
-                                width: 100%;
-                                display: inline-block;
-                                overflow: hidden;
-                                img{
-                                    display: inline-block;
-                                    width: 100%;
-                                    object-fit: cover;
-                                }
-                                &::before {
-                                    content: '';
-                                    position: absolute;
-                                    top: 0;
-                                    left: 0;
-                                    width: 100%;
-                                    height: 100%;
-                                    background: #201f1f42; 
-                                    opacity: 0; 
-                                    transition: opacity 0.4s ease-in;
-                                    z-index: 1;
-                                }
-                            }
-                            .wrapper_img:hover img{
-                                transform: scale(1.2);
-                                transition: 0.4s ease-in;
-                            }
-                            .wrapper_img:hover::before {
-                                opacity: 1; 
-                            }
-                        }
-                        
-                        
-                        
-                    }
+                    
                 }
                 .list_card_container.active{
                     display: block;
@@ -424,20 +389,6 @@ ul,li{
                 width: calc(100% - 250px);
                 .wrapper_list_products{
                     width: 100%;
-                    ul{
-                        display: flex;
-                        justify-content: space-between;
-                        gap: 30px;
-                        .item_product{
-                            width: calc(100% / 4 - 30px);
-                            img{
-                                width: 100%;
-                                object-fit: cover;
-                            }
-                            
-                        }
-                    }
-                    
                 }
             }
         }
@@ -512,7 +463,37 @@ ul,li{
                 }
             }
         }
-
+        .wrapper_detail_news{
+            padding: 0 80px;
+            margin-top: 30px;
+            h3{
+                color: #333;
+                font-size: 22px;
+                padding-bottom: 10px;
+                margin-bottom: 10px;
+                text-transform: capitalize;
+            }
+            .content{
+                width: 100%;
+                text-align: left;
+                p{
+                    margin: 0;
+                    padding: 8px 0;
+                    font-size: 16px;
+                    line-height: 1.8;
+                }
+                img{
+                    width: 100%;
+                    object-fit: cover;
+                }
+                hr{
+                    height: 1px;
+                    border: none;
+                    border-top: 1px dashed #5a5757;
+                    margin: 25px 0 15px 0;
+                }
+            }
+        }
         /* about us*/
         .wrapper_about{
             width: 100%;
@@ -779,6 +760,216 @@ ul,li{
                 line-height: 1.8;
             }
         }
+        .wrapper_infor_product{
+            position: relative;
+            margin-top: 20px;
+            padding: 50px 70px;
+            .information_product{
+                display: flex;
+                gap: 30px;
+                width: 100%;
+                .level_left{
+                    max-width: 45%;
+                    width: 45%;
+                    .wrapper_img_product{
+                        width: 100%;
+                        position: relative;
+                        overflow: hidden;
+                        img{
+                            width: 100%;
+                            object-fit: cover;
+                            cursor: pointer;
+                        }
+                        &::before{
+                            content: '';
+                            position: absolute;
+                            background: #201f1f42; 
+                            top: 0;
+                            left: 0;
+                            bottom: 0;
+                            right: 0;
+                            opacity: 0;
+                            transition: 0.6s ease-in;
+                        }
+                        &::before:hover{
+                            opacity: 1;
+                            background: #3b3a3a81;
+                        }
+        
+                    }
+                    .wrapper_img_product:hover img{
+                        transition: 0.6s ease-in;
+                        transform: scale(1.2);
+                        z-index: 1;
+                    }
+                    .wrapper_img_product:hover::before{
+                        opacity: 1;
+                        z-index: 2;
+                    }
+                    .wrapper_list_img_product{
+                        width: 100%;
+                        gap: 20px;
+                        margin-top: 20px;
+                        li{
+                            width: calc(100% / 4 - 20px);
+                            img{
+                                width: 100%;
+                                object-fit: cover;
+                                border: 1px solid transparent;
+                                cursor: pointer;
+                            }
+                        }
+                    }
+                }
+                .wrapper_detail_infor{
+                    width: 50%;
+                    max-width: 50%;
+    
+                    h3{
+                        font-size: 28px;
+                        font-weight: 500;
+                    }
+                    .sub_heading{
+                        font-size: 18px;
+                        font-weight: 500;
+                    }
+                    h3, .sub_heading{
+                        display: -webkit-box; /* Sử dụng box layout của Webkit */
+                        -webkit-line-clamp: 2; /* Số dòng tối đa */
+                        -webkit-box-orient: vertical; /* Hướng box theo chiều dọc */
+                        overflow: hidden; /* Ẩn phần văn bản thừa */
+                        text-overflow: ellipsis; /* Thêm dấu "..." nếu bị cắt */
+                        white-space: normal;
+                    }
+                    .specifications{
+                        width: 100%;
+                        padding-top: 20px;
+                        .items_specifications{
+                            color: #0a0a0a86;
+                            width: 100%;
+                            display: flex;
+                            height: 30px;
+                            justify-content: space-between;
+                            .text_right{
+                                width: 60%;
+                                text-align: left;
+                                display: -webkit-box; /* Sử dụng box layout của Webkit */
+                                -webkit-line-clamp: 1; /* Số dòng tối đa */
+                                -webkit-box-orient: vertical; /* Hướng box theo chiều dọc */
+                                overflow: hidden; /* Ẩn phần văn bản thừa */
+                                text-overflow: ellipsis; /* Thêm dấu "..." nếu bị cắt */
+                                white-space: normal;
+                            }
+                        }
+                    }
+                    .option_products{
+                        gap: 20px;
+                        justify-content: start !important; 
+                        margin-top: 80px;
+                        .option{
+                            border-radius: 8px;
+                        }
+                    }
+                }
+            }
+            .detail_infor{
+                width: 100%;
+                background: #fff;
+                margin-top: 30px;
+                .heading{
+                    width: 100%;
+                    background-color: #DBDBDB;
+                    h3{
+                        padding: 10px;
+                        text-transform: uppercase;
+                        font-size: 18px;
+                        margin: 0;
+                        background: #fff;
+                        font-weight: 600;
+                    }
+                    .backgr_bluer{
+                        width: 100%;
+                        height: 100%;
+                        display: block;
+                    }
+                }
+                .display_product{
+                    width: 100%;
+                    padding: 0 30px;
+                    margin-top: 70px;
+                    .heading_detail{
+                        padding: 10px 0;
+                        position: relative;
+                        border-bottom: 1px solid #2f904b;
+                        h3{
+                            font-size: 25px;
+                            color: #2f904b;
+                            font-weight: 600;
+                        }
+                        
+                    }
+                    .heading_detail::after{
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 10%;
+                        border-bottom: 5px solid #2f904b;
+                    }
+                    .list_img_detail{
+                        width: 100%;
+                        display: flex;
+                        img{
+                            width: calc(100% / 3);
+                            object-fit: cover;
+                        }
+                    }
+                    p{
+                        margin: 0;
+                        padding: 8px 0;
+                        font-size: 16px;
+                        line-height: 1.8;
+                        font-size: 16px;
+                        span{
+                            color: blue;
+                            font-size: 18px;
+                        }
+                    }
+                    hr {
+                        height: 1px;
+                        border: none;
+                        border-top: 1px dashed #0e0c0c;
+                        margin: 15px 0 15px 0;
+                    }
+                }
+            }
+        }
+        .logo_detail, .suggest_products{
+            width: 100%;
+            
+        }
+        .logo_detail{
+            h2{
+                font-family: "Yuji Mai", serif;
+                color: #1d1f1e8c;
+                font-size: 30px;
+                font-weight: 600;
+            }
+        }
+        .suggest_products{
+            h3{
+                font-family: 'Impact';
+                letter-spacing: .05em;
+                font-size: 48px;
+                line-height: 1.2em;
+                text-transform: uppercase;
+                font-weight: normal;
+                color: #2f904b;
+            }
+        }
+        .list_suggest_img{
+            width: 100%;
+        }
     }
     footer{
         width: 100%;
@@ -899,4 +1090,42 @@ ul,li{
         font-size: 17px;
         color: #393939;
     }
+}
+.arrow_card{
+    .item_card{
+        width: calc(100% / 4 - 20px);
+        .wrapper_img{
+            position: relative;
+            width: 100%;
+            display: inline-block;
+            overflow: hidden;
+            img{
+                display: inline-block;
+                width: 100%;
+                object-fit: cover;
+            }
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: #201f1f42; 
+                opacity: 0; 
+                transition: opacity 0.4s ease-in;
+                z-index: 1;
+            }
+        }
+        .wrapper_img:hover img{
+            transform: scale(1.2);
+            transition: 0.4s ease-in;
+        }
+        .wrapper_img:hover::before {
+            opacity: 1; 
+        }
+    }
+    
+    
+    
 }
